# mint-website-rails

./: .env  .gitignore  .ruby-gemset  Dockerfile  Gemfile  Makefile  README.md  config.ru  docker-compose.yml
app/assets/: docs.json
app/assets/config/: manifest.js
app/assets/javascripts/: application.js
app/controllers/: application_controller.rb  blog_controller.rb  guides_controller.rb  landings_controller.rb  packages_controller.rb  sandbox_controller.rb  versions_controller.rb
app/helpers/: application_helper.rb  guides_helper.rb  versions_helper.rb
app/interactions/: compile_sandbox.rb  format_sandbox.rb  import_version.rb  sync_package.rb  update_api_documentation.rb  update_sandbox.rb  version_entities.rb
app/jobs/: screenshot_job.rb
app/models/: package.rb  sandbox.rb  user.rb  version.rb
config/: application.rb  credentials.yml.enc  database.yml  routes.rb  storage.yml
config/environments/: development.rb  production.rb
config/initializers/: cors.rb  host.rb  omniauth.rb
db/: schema.rb
db/migrate/: 20191103120933_initial_migration.rb  20200320071249_add_html_to_sandboxes.rb  20200320071624_create_active_storage_tables.active_storage.rb  20230420084141_add_mint_version_to_sandboxes.rb
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  OVERVIEW.md  README.md  docker-compose.yml  setup.sh
rust/migrations/: 20240101000000_create_users.sql  20240101000001_create_sandboxes.sql
rust/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs  oauth.rs
rust/src/handlers/: auth.rs  mod.rs  sandbox.rs
(+127 files in other folders)
